tests/integration/snapshots/integration__test_json__leading_zero_zero.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
000
stdout --- 
<empty>
stderr --- 
error: unexpected leading zero
 --> stdin:1:1
  |
1 | 000
  | -^^
  | |
  | first zero found here
  |
help: remove the leading zeros
  |
1 - 000
1 + 0
  |
