tests/integration/snapshots/integration__test_json__minus_sign.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
-
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found no significant characters
 --> stdin:1:1
  |
1 | -
  | ^
  | |
  | minus sign found here
  |
help: insert placeholder digits after the minus sign
  |
1 | -194
  |  +++
