tests/integration/snapshots/integration__test_json__negative_float_with_exponent.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
-98.25e12
stdout --- 
-98.25e12
stderr --- 
<empty>
